--- a/css/media.css
+++ b/css/media.css
@@ -195,7 +195,7 @@
         font-size: 12px;
         padding: 0px 17px;
     }
-    #team .member .down2::after {
+    #team .member .down2:after {
         display: none;
     }
    #team .member .down2 .read {
@@ -215,7 +215,7 @@
     #chart .border4 {
         display: none;
     }
-     #chart::after {
+     #chart:after {
         height: 1px;
         width: 94%;
         bottom: 5%;
@@ -409,7 +409,7 @@
         padding-right: 30px;
         font-size: 18px;
     }
-    #invite_leaders .title ul li a::after {
+    #invite_leaders .title ul li a:after {
         width: 110px;
     }
     /*invite part ends*/
@@ -522,7 +522,7 @@
         top: 4px;
         text-align: center;
     }
-	#popular .toggle::before {
+	#popular .toggle:before {
         top: -24px;
     }
     .icon {
@@ -565,7 +565,7 @@
     #forex .back_bg table .tab{
         width: 175px;
     }
-    #forex .toggle::before {
+    #forex .toggle:before {
         top: -24px;
     }
     #forex .toggle .fa-bars {
@@ -616,7 +616,7 @@
         position: absolute;
         top: -6px;
     }
-    #team .member .down2::after {
+    #team .member .down2:after {
         display: none;
     }
     #team .bottom_menu a {
@@ -709,7 +709,7 @@
         font-size: 23px;
         padding: 35px 0px 20px 45px;
     }
-    #chart::after {
+    #chart:after {
         content: '';
         position: absolute;
         height: 1px;
@@ -821,7 +821,7 @@
     #login .page .title {
         margin: 50px 0px 0px;
     }
-    #login .page .title h3::before {
+    #login .page .title h3:before {
         top: 10%;
         left: 8%;
     }
@@ -876,7 +876,7 @@
         top: 4px;
         text-align: center;
     }
-    #invites .toggle::before {
+    #invites .toggle:before {
         top: -24px;
     }
     .icon {
@@ -1000,7 +1000,7 @@
         top: 4px;
         text-align: center;
     }
-    #invite_leaders .toggle::before {
+    #invite_leaders .toggle:before {
         top: -24px;
     }
     .icon {
@@ -1026,7 +1026,7 @@
         padding-right: 10px;
         font-size: 11px;
     }
-    #invite_leaders .title ul li a::after {
+    #invite_leaders .title ul li a:after {
         width: 70px;
     }
     /*invite part ends*/
@@ -1085,7 +1085,7 @@
         top: 4px;
         text-align: center;
     }
-	#popular_links .toggle::before {
+	#popular_links .toggle:before {
         top: -24px;
     }
     #popular_links .icon {
@@ -1181,7 +1181,6 @@
     #menu .navbar{
         background: rgb(117,187,161);
         background: -webkit-linear-gradient(5deg, rgba(117,187,161,1) 0%, rgba(21,124,123,1) 100%);
-        background: -o-linear-gradient(5deg, rgba(117,187,161,1) 0%, rgba(21,124,123,1) 100%);
         background: linear-gradient(85deg, rgba(117,187,161,1) 0%, rgba(21,124,123,1) 100%); 
     }
     .navbar-toggle {
@@ -1228,7 +1227,7 @@
         font-size: 16px;
         padding: 30px 0px 25px 5px;
     }
-    #popular .title h3::before {
+    #popular .title h3:before {
         left: 3px;
     }
     #popular .toggle .fa-bars {
@@ -1254,7 +1253,7 @@
         border-top-right-radius: 0px;
         border-top-left-radius: 0px;
     }
-    #popular .title h3::before {
+    #popular .title h3:before {
         width: 3px;
         height: 33px;
         top: 5px;
@@ -1300,7 +1299,7 @@
     .border{
         display: none;
     }
-    #team .member .down2::after {
+    #team .member .down2:after {
         display: none;
     }
     #team .member .down2 .read {
@@ -1397,7 +1396,7 @@
         font-size: 25px;
         padding: 0px 0px 20px 16px;
     }
-    #chart::after {
+    #chart:after {
         display: none;
     }
     /***********Chart part ends*************/
@@ -1533,7 +1532,7 @@
     #login .page{
         min-height: 0px;
     }
-   #login .page .title h3::before {
+   #login .page .title h3:before {
        display: none;
     }
     #login .page .title h3 {
@@ -1574,7 +1573,7 @@
         font-size: 16px;
         padding: 30px 0px 25px 5px;
     }
-    #invites .title h3::before {
+    #invites .title h3:before {
         left: 3px;
     }
     #invites .toggle .fa-bars {
@@ -1600,7 +1599,7 @@
         border-top-right-radius: 0px;
         border-top-left-radius: 0px;
     }
-    #invites .title h3::before {
+    #invites .title h3:before {
         width: 3px;
         height: 33px;
         top: 5px;
@@ -1726,6 +1725,7 @@
         margin-bottom: 50px;
     }
     #register .rules .form-check {
+        display: -ms-inline-grid;
         display: inline-grid;
     }
     #register .button {
@@ -1745,7 +1745,7 @@
         font-size: 16px;
         padding: 30px 0px 25px 5px;
     }
-    #invite_leaders .title h3::before {
+    #invite_leaders .title h3:before {
         left: 3px;
     }
     #invite_leaders .toggle .fa-bars {
@@ -1772,7 +1772,7 @@
         border-top-left-radius: 0px;
         height: 126px;
     }
-    #invite_leaders .title h3::before {
+    #invite_leaders .title h3:before {
         width: 3px;
         height: 33px;
         top: 5px;
@@ -1786,7 +1786,7 @@
     #invite_leaders .title ul {
         line-height: 30px;
     }
-    #invite_leaders .title ul li a::after {
+    #invite_leaders .title ul li a:after {
         width: 90px;
         left: 15px;
         top: 26px;
@@ -1822,7 +1822,7 @@
         font-size: 16px;
         padding: 30px 0px 25px 5px;
     }
-    #popular_links .title h3::before {
+    #popular_links .title h3:before {
         left: 3px;
     }
     #popular_links .toggle .fa-bars {
@@ -1842,6 +1842,8 @@
     #thread_links .preg {
         margin-top: 24px;
         margin-left: 0px;
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
         display: inline-flex;
     }
    #thread_links .nxt {
@@ -1874,7 +1876,7 @@
     #popular_search .title ul li a {
         font-size: 15px;
     }
-    #popular_search .title ul li a::after {
+    #popular_search .title ul li a:after {
         display: none;
     }
     /***********Popular part ends*************/
